--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ table {
     font-style: normal;
 }
 
+body{
+    background-color: #457b9d;
+}
 h1{
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -88,4 +91,14 @@ p{
     line-height: 30px;
     margin: 0.5em 0.5em 0.5em 0;
     padding: 0.5em 0.5em 0.5em 0;
+}
+
+
+#bottom{
+    margin: 0;
+    padding: 0;
+}
+
+span{
+    color: #fefae0;
 }
