--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ table {
 body{
     background-color: #457b9d;
 }
+
 h1{
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -72,6 +73,7 @@ h1{
     margin: 1em 1em 1em 0;
     border: thick double #020318;
     padding: 1em 1em 1em 0;
+    text-align: center;
 }
 
 h2{
@@ -91,6 +93,7 @@ p{
     line-height: 30px;
     margin: 0.5em 0.5em 0.5em 0;
     padding: 0.5em 0.5em 0.5em 0;
+    text-align: justify;
 }
 
 
@@ -102,3 +105,43 @@ p{
 span{
     color: #fefae0;
 }
+
+.icon{
+    min-width: 20px;
+    max-width: 20px;
+    min-height: 20px;
+    max-height: 20px;
+}
+
+.container {
+    display: flex;
+  align-items: center;
+  justify-content: center
+  }
+
+.container:hover .overlay {
+    opacity: 1;
+  }
+
+.overlay {
+    position: relative;
+    bottom: 0;
+    background: #00000080; /* Black see-through */
+    color: #fefae0;
+    min-width: 180px;
+    max-width: 180px;
+    min-height: 60px;
+    max-height: 60px;
+    transition: .5s ease;
+    opacity:0;
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+  }
+
+img {
+    max-width: 200px;
+    max-height: 200px;
+    min-width: 200px;
+    min-height: 200px;
+  }
