--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ h1{
     border: thick double #020318;
     padding: 1em 1em 1em 0;
     text-align: center;
+    text-shadow: 5px 5px black;
+    color: #fefae0;
+    
 }
 
 h2{
@@ -83,6 +86,7 @@ h2{
     font-size: 1.5rem;
     margin: 0.8em 0.8em 0.8em 0;
     padding: 0.8em 0.8em 0.8em 0;
+    max-width: 700px;
 }
 
 p{
@@ -144,4 +148,9 @@ img {
     max-height: 200px;
     min-width: 200px;
     min-height: 200px;
-  }
+    box-shadow: 10px 10px black;
+}
+
+.noimage{
+    max-width: 700px;
+}
