--- a/style.css
+++ b/style.css
@@ -64,15 +64,20 @@ table {
 /* Main style */
 
 body{
-    background-color: #457b9d;
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/Background.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
 }
 
 header{
-    background-color: #1c3342;
+    background-color: #1a5e8b;
 }
 
 .down{
-    background-color: #1c3342;
+    background-color: #1a5e8b;
 }
 
 h1{
@@ -133,6 +138,7 @@ h2{
     margin: 0.8em 0.8em 0.8em 0;
     padding: 0.8em 0.8em 0.8em 0;
     max-width: 700px;
+    color: #fefae0;
 }
 
 p{
@@ -144,10 +150,31 @@ p{
     margin: 0.5em 0.5em 0.5em 0;
     padding: 0.5em 0.5em 0.5em 0;
     text-align: start;
+    color: #fefae0;
 }
 
 span{
-    color: #fefae0;
+  color: #fefae04f;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+span:hover{
+  background-color: white; 
+  color: black; 
+  border: 2px solid #fefae0;
+}
+
+#url{
+  color: #0b4af7a1;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+#url:hover{
+  background-color: white; 
+  color: black; 
+  border: 2px solid #fefae0;
 }
 
 /* Hidden picture alt */
@@ -198,7 +225,7 @@ form {
       max-width: 600px;
       margin: 20px auto;
       padding: 20px;
-      background-color: #457b9d;
+      background-color: #fefae0;
       border-radius: 5px;
   }
   
