--- a/style.css
+++ b/style.css
@@ -3,114 +3,285 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Font family */
 
 .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* topnavigation */
+
+.topnav {
+  background-color: #333;
+  overflow: visible;
+  margin: 3px;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #1c3342;
+  color: #fefae0;
+  padding: 10px;
+  margin: 10px;
+  border: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.topnav .icon {
+  display: none;
+}
+.navigation {
+  color: #ffffff;
+  margin: 0px;
+  border: 2px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.navigation:hover {
+  box-shadow: #000000 0 3px 15px inset, #463535a6 0 3px 5px,
+    #463535a6 0 10px 13px;
+  transform: scale(1.05);
+}
+
+/* color-scheme */
+
+:root {
+  background-color: white;
+  color: black;
+}
+
+/* Light mode styles */
+@media (prefers-color-scheme: light) {
+  :root {
+    background-color: white;
+    color: black;
+  }
+  form {
+    max-width: 360px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fefae0;
+    border-radius: 5px;
+  }
+}
+
+/* Dark mode styles */
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: black;
+    color: #463535a6;
+  }
+  .image {
+    filter: brightness(40%);
+  }
+  form {
+    max-width: 360px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #10100e;
+    border-radius: 5px;
+  }
 }
 
 /* Main style */
 
-body{
+body {
   width: 100%;
   height: 100vh;
-  background-image: url(images/Background.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: repeat;
+  background-image: url(images/lorembackground.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
-header{
-    background-color: #1a5e8b;
+header {
+  display: block;
 }
 
-.down{
-    background-color: #1a5e8b;
+nav {
+  margin: 8px;
 }
 
-h1{
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 2rem;
-    margin: 1em 1em 1em 0;
-    border: thick double #020318;
-    padding: 1em 1em 1em 0;
-    text-align: center;
-    text-shadow: 5px 5px black;
-    color: #fefae0;
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 2rem;
+  margin: 1em 1em 1em 0;
+  border: thick double #020318;
+  padding: 1em 1em 1em 0;
+  text-align: center;
+  text-shadow: 5px 5px black;
+  color: #fefae0;
 
-    /* animation style */
+  /* animation style */
 
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    flex: auto;
-    flex-basis: auto;
-    min-width: 400px;
-    opacity: 0;
-    animation-name: textFader;
-    animation-duration: 18s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+  display: inline-block;
+  max-width: 60px;
+  min-width: 60px;
+  opacity: 0;
+  animation-name: textFader;
+  animation-duration: 18s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
 }
 
-h1:first-of-type { animation-delay: 0s; }
-h1:nth-of-type(2) { animation-delay: 6s; }
-h1:last-of-type { animation-delay: 12s; }
+h1:first-of-type {
+  animation-delay: 0s;
+}
+h1:nth-of-type(2) {
+  animation-delay: 6s;
+}
+h1:last-of-type {
+  animation-delay: 12s;
+}
 
 @keyframes textFader {
   0% {
@@ -122,7 +293,8 @@ h1:last-of-type { animation-delay: 12s; }
   22% {
     opacity: 1;
   } /* fade-out */
-  33% { /* <-------------------{ 100% / num(H2) = 33% } */
+  33% {
+    /* <-------------------{ 100% / num(H2) = 33% } */
     opacity: 0;
   } /* waiting for the finish animation of other blocks */
   100% {
@@ -130,145 +302,174 @@ h1:last-of-type { animation-delay: 12s; }
   }
 }
 
-h2{
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 1.5rem;
-    margin: 0.8em 0.8em 0.8em 0;
-    padding: 0.8em 0.8em 0.8em 0;
-    max-width: 700px;
-    color: #fefae0;
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 2.5rem;
+  margin: 0.8em 0.8em 0.8em 0;
+  padding: 0.8em 0.8em 0.8em 0;
+  max-width: 360px;
+  color: #e7c902;
 }
 
-p{
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1rem;
-    line-height: 30px;
-    margin: 0.5em 0.5em 0.5em 0;
-    padding: 0.5em 0.5em 0.5em 0;
-    text-align: start;
-    color: #fefae0;
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 30px;
+  margin: 0.5em 0.5em 0.5em 0;
+  padding: 0.5em 0.5em 0.5em 0;
+  text-align: start;
 }
 
-span{
-  color: #fefae04f;
+span {
+  color: #e7c902;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
-span:hover{
-  background-color: white; 
-  color: black; 
+span:hover {
+  background-color: white;
+  color: black;
   border: 2px solid #fefae0;
 }
 
-#url{
+#url {
   color: #0b4af7a1;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
-#url:hover{
-  background-color: white; 
-  color: black; 
+#url:hover {
+  background-color: white;
+  color: black;
   border: 2px solid #fefae0;
 }
 
 /* Hidden picture alt */
 
-.container {
-    display: flex;
-  align-items: center;
-  justify-content: center
-  }
-
-.container:hover .overlay {
-    opacity: 1;
-  }
-
 .overlay {
-    position: relative;
-    bottom: 0;
-    background: #00000080;
-    color: #fefae0;
-    min-width: 180px;
-    max-width: 180px;
-    min-height: 60px;
-    max-height: 60px;
-    transition: .5s ease;
-    opacity:0;
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-  }
-
-img {
-    max-width: 200px;
-    max-height: 200px;
-    min-width: 200px;
-    min-height: 200px;
-    box-shadow: 10px 10px black;
+  position: relative;
+  bottom: 0;
+  background: #00000080;
+  color: #fefae0;
+  min-width: 180px;
+  max-width: 180px;
+  min-height: 60px;
+  max-height: 60px;
+  transition: 0.5s ease;
+  opacity: 0;
+  font-size: 30px;
+  padding: 5px;
+  text-align: center;
 }
 
-/* paragraph with no image */
-
-.noimage{
-    max-width: 700px;
+img {
+  max-width: 180px;
+  max-height: 200px;
+  box-shadow: 10px 10px black;
 }
 
 /* Forms style */
 
 form {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fefae0;
-      border-radius: 5px;
-  }
-  
+  max-width: 360px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
+}
+
 label {
-    display: block;
-    margin-top: 10px;
+  display: block;
+  margin-top: 10px;
 }
 
 textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    box-sizing: border-box;
-    border: 1px solid #fefae0;
-    border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  border: 1px solid #fefae02c;
+  border-radius: 5px;
 }
 #register {
-    background-color: #457b9d;
-    color: #fefae0;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
+  background-color: #e7c90244;
+  color: #fefae0;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 #register:hover {
-    box-shadow: #000000 0 3px 15px inset, #fefae0 0 3px 5px, #fefae0 0 10px 13px;
+  box-shadow: #000000 0 3px 15px inset, #e7c902 0 3px 5px, #e7c902 0 10px 13px;
   transform: scale(1.05);
 }
 
 /* jump to top, bottom, reference */
 
 .link {
-    background-color: #1c3342;
-    color: #fefae0;
-    padding: 10px;
-    margin: 10px;
-    border: 10px;
-    border-radius: 10px;
-    cursor: pointer;
+  background-color: #1c3342;
+  color: #e7c902;
+  padding: 10px;
+  margin: 10px;
+  border: 10px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .link:hover {
-  box-shadow: #000000 0 3px 15px inset, #fefae0 0 3px 5px, #fefae0 0 10px 13px;
+  box-shadow: #000000 0 3px 15px inset, #e7c902 0 3px 5px, #e7c902 0 10px 13px;
   transform: scale(1.05);
+}
+
+/* Responsive design */
+
+@media screen and (max-width: 360px) {
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    width: 90%;
+    margin: 2em auto;
+    font: 1em/1.3 Roboto, sans-serif;
+    background-size: 100% 36%;
+  }
+  .animaton {
+    margin: 0.4em 0.4em 0.4em 0;
+    padding: 0.4em 0.4em 0.4em 0;
+    font-size: 20px;
+    display: inline-block;
+  }
+  h2 {
+    font-size: 20px;
+    line-height: 20px;
+  }
+  p {
+    font-size: 15px;
+    line-height: 25px;
+  }
+  header {
+    width: 90%;
+  }
+  article {
+    width: 80%;
+  }
+  .container {
+    width: 90%;
+  }
+  .down {
+    max-width: 100%;
+    display: flex;
+  }
+  h1,
+  #article {
+    min-width: 240px;
+    max-width: 360px;
+    font-size: 30px;
+    margin: 5px;
+    padding: 5px;
+  }
 }
