--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ table {
 @media (prefers-color-scheme: light) {
   :root {
     background-color: white;
-    color: black;
+    color: rgb(206, 204, 204);
   }
   form {
     max-width: 360px;
@@ -217,7 +217,7 @@ table {
 @media (prefers-color-scheme: dark) {
   :root {
     background-color: black;
-    color: #463535a6;
+    color: #eeededd3;
   }
   .image {
     filter: brightness(40%);
@@ -235,9 +235,15 @@ table {
 
 body {
   width: 100%;
-  height: 100vh;
-  background-image: url(images/lorembackground.jpg);
-  background-repeat: no-repeat;
+  height: 100%;
+  background: rgb(88, 88, 107);
+  background: linear-gradient(
+    247deg,
+    rgba(88, 88, 107, 1) 11%,
+    rgba(25, 24, 24, 1) 50%,
+    rgba(37, 44, 46, 1) 85%
+  );
+  background-repeat: repeat;
   background-size: 100% 100%;
 }
 
@@ -260,9 +266,10 @@ h1 {
   text-align: center;
   text-shadow: 5px 5px black;
   color: #fefae0;
+}
+/* animation style */
 
-  /* animation style */
-
+.animaton {
   display: inline-block;
   max-width: 60px;
   min-width: 60px;
@@ -272,14 +279,13 @@ h1 {
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
-
-h1:first-of-type {
+.first {
   animation-delay: 0s;
 }
-h1:nth-of-type(2) {
+.second {
   animation-delay: 6s;
 }
-h1:last-of-type {
+.third {
   animation-delay: 12s;
 }
 
