--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ table {
   --primary-color: #ffffff;
   --secondary-color: #000000;
   --font-color: #ff9500;
-  --bg-color: #115074;
+  --bg-color: #000000;
   --heading-color: #292922;
 }
 
@@ -207,7 +207,7 @@ table {
   :root {
     --primary-color: #726f6f;
     --secondary-color: #ffffff;
-    --font-color: #cf7900;
+    --font-color: #ffffff;
     --bg-color: #000000;
     --heading-color: #292922;
   }
