--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ table {
 :root {
   --primary-color: #ffffff;
   --secondary-color: #000000;
-  --font-color: #ff9500;
+  --font-color: #ffffff;
   --bg-color: #000000;
   --heading-color: #292922;
 }
